force-app/main/default/objects/R360_Approval_Decision__c/R360_Approval_Decision__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Immutable approval step and decision evidence for versioned Resource 360 aggregates.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Approval Decision</label><nameField><displayFormat>APR-{00000}</displayFormat><label>Approval Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Approval Decisions</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>