force-app/main/default/objects/R360_Approval_Decision__c/fields/Approver__c.field-meta.xml
<CustomField><fullName>Approver__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Approver</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Approval Decisions</relationshipLabel><relationshipName>Resource360_Approval_Decisions</relationshipName><type>Lookup</type></CustomField>