force-app/main/default/objects/R360_Approval_Decision__c/fields/Decision_ID__c.field-meta.xml
<CustomField><fullName>Decision_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Decision ID</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>