force-app/main/default/objects/R360_Approval_Decision__c/fields/Decision_Note__c.field-meta.xml
<CustomField><fullName>Decision_Note__c</fullName><label>Decision Note</label><length>2000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>