force-app/main/default/objects/R360_Approval_Decision__c/fields/Economic_Signature__c.field-meta.xml
<CustomField><fullName>Economic_Signature__c</fullName><label>Economic Signature</label><length>64</length><type>Text</type></CustomField>