force-app/main/default/objects/R360_Approval_Decision__c/fields/Entity_Version__c.field-meta.xml
<CustomField><fullName>Entity_Version__c</fullName><label>Entity Version</label><precision>8</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>