force-app/main/default/objects/R360_Approval_Decision__c/fields/Required_Role__c.field-meta.xml
<CustomField><fullName>Required_Role__c</fullName><label>Required Role</label><length>80</length><required>true</required><type>Text</type></CustomField>