force-app/main/default/objects/R360_Approval_Decision__c/fields/Step_Number__c.field-meta.xml
<CustomField><fullName>Step_Number__c</fullName><label>Step Number</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>